recursion.hanoi.TricolorHanoi1.scala.error
Erreur de compilation :
TricolorHanoi1:7: error: not found: value hanoi
    hanoi(height-1,src,dst,mid)
    ^TricolorHanoi1:9: error: not found: value hanoi
      hanoi(height-1,mid,src,dst)
      ^