recursion.hanoi.TricolorHanoi1.scala.code
def move3(height:Int, src:Int, mid:Int, dst:Int) {
  if (height == 1){
    deplace(src,dst)
  }
  else{
    hanoi(height-1,src,dst,mid)
      deplace(src,dst)
      hanoi(height-1,mid,src,dst)
  }
  }